# tg_bot_v2

./: Cargo.toml  README.md  Shuttle.toml  Taskfile.yml
.github/workflows/: deploy.yml
src/: db.rs  errors.rs  main.rs  models.rs  routes.rs  tg.rs
src/models/: market.rs  moy_sklad.rs  product.rs  tg.rs  tgapi.rs  woocommerce.rs
src/models/market/: catalog.rs  offer.rs  order.rs  order_status.rs  price.rs  shops.rs  stock.rs
src/models/moy_sklad/: product.rs
src/models/telegram/: update.rs
src/models/telegram/update/: xl.rs
src/models/tgapi/: chat_permissions.rs  dics.rs  message_kinds.rs
src/models/tgapi/message_kinds/: media_kinds.rs
src/models/tgapi/message_kinds/media_kinds/: mime_serde.rs
src/models/woocommerce/: findproduct.rs  product.rs
src/routes/: sync.rs  telegram.rs  ymarket.rs
