[package]
name = "tg_bot_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
shuttle-shared-db = {version = "0.32.0", features = ["mongodb"]}
shuttle-axum = "0.32.0"
shuttle-runtime = "0.32.0"
tokio = {version = "1.34.0", features = ["full"]}
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "*"
serde_with = {version = "3.4.0", features = ["macros"]}
mongodb = "2.7.1"
shuttle-secrets = "0.32.0"
reqwest = {version = "0.11.22", features = ["json"]}
anyhow = "*"
futures = "*"
