[package]
name = "tg_bot_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
shuttle-shared-db = {version = "0.33.0", features = ["mongodb"]}
shuttle-axum = "0.33.0"
shuttle-runtime = "0.33.0"
tokio = {version = "1.34", features = ["full"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = {version = "3.4", features = ["macros"]}
mongodb = "2.7"
shuttle-secrets = "0.33.0"
reqwest = {version = "0.11", features = ["json", "gzip"]}
anyhow = "1"
futures = "0.3"
chrono = {version = "0.4", features = ["serde"]}
bson = {version = "2.7", features = ["chrono-0_4", "serde_with", "uuid-1"]}
uuid = {version = "1.5", features = ["serde", "v4", "macro-diagnostics"]}
